--- a/jpn/03-Strasbourg-Pictures.ipynb
+++ b/jpn/03-Strasbourg-Pictures.ipynb
@@ -507,7 +507,8 @@
      "user_tz": -120
     },
     "id": "bq7qHm1wB83O",
-    "outputId": "d3562e5d-af7f-4e41-b526-05e04c066b5e"
+    "outputId": "d3562e5d-af7f-4e41-b526-05e04c066b5e",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1333,7 +1334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
