--- a/jpn/Draft.ipynb
+++ b/jpn/Draft.ipynb
@@ -332,25 +332,346 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Flask-SQLAlchemy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forms.py     models.py\t  routes.py  static\tutils.py\r\n",
+      "__init__.py  __pycache__  site.db    templates\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../app_flask/main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ranto/.pyenv/versions/3.8.5/envs/vivadata/lib/python3.8/site-packages/flask_sqlalchemy/__init__.py:833: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
+      "  warnings.warn(FSADeprecationWarning(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../app_flask')\n",
+    "from main import db\n",
+    "from main.models import User, Post\n",
+    "import flask_sqlalchemy\n",
+    "from datetime import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "User.query.filter_by(id='1').first().id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "users = User.query.paginate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tom = User(username='Tom', email='Tom@machin.com', password=\"pass\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pierre = User(username='Pierre', email='Pierre@machin.com', password='pass')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.add(Tom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.add(Pierre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_1 = dt.utcnow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_2 = dt.utcnow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_3 = dt.utcnow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts = [\n",
+    "    {\n",
+    "        'title': 'La Société Mystérieuse de Strasbourg',\n",
+    "        'date': date_2,\n",
+    "        'content': \"La Société Mystérieuse de Strasbourg compte de nombreux érudits qui \\\n",
+    "        ont façonné la ville de Strasbourg. Ils vous ont laissé quelques énigmes afin de \\\n",
+    "        rencontrer les meilleurs d’entre vous, de vous tester et peut-être même de les \\\n",
+    "        rejoindre.\\\n",
+    "        \\nSerez-vous de taille à résoudre les énigmes des grandes figures qui ont contribué \\\n",
+    "        au prestige de Strasbourg ?\",\n",
+    "        \"user_id\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        'title': '1913, Meurtre à la Krutenau',\n",
+    "        'date': date_3,\n",
+    "        'content': \"“Mon arrière grand-père est un assassin selon les archives \\\n",
+    "        historiques. Aidez-moi à fouiller le passé pour le prouver ou le démentir” \\\n",
+    "        \\nJean est en possession d’une lettre d’un aïeul contredisant les archives \\\n",
+    "        historiques qui font de son arrière-grand père l’auteur du Meurtre à la \\\n",
+    "        Krutenau. Il vous sollicite pour investiguer et connaître la vérité. \\\n",
+    "        Une Machine à Immersion Spatio-Temporelle devrait vous permettre de revoir \\\n",
+    "        certaines scènes et de comprendre ce qu’il s’est passé.\",\n",
+    "        \"user_id\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        'title': 'ENIGMA Strasbourg',\n",
+    "        'date': date_1,\n",
+    "        'content': \"Percez les mystères de Strasbourg et explorez la ville.\\\n",
+    "        \\nVous avez aimé les escape games ? Alors relevez le défi des jeux de \\\n",
+    "        piste ENIGMA Strasbourg. Nul besoin de s’échapper, seulement de s’évader !\\\n",
+    "        \\nLes jeux de piste ENIGMA Strasbourg sont des jeux géants et se déroulent \\\n",
+    "        en extérieur. Parcourez en autonomie, revisitez à votre rythme l’hypercentre \\\n",
+    "        de Strasbourg à travers différents jeux de piste ou enquêtes.\\\n",
+    "        \\nBientôt de retour à Strasbourg.\",\n",
+    "        \"user_id\": 1\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'La Société Mystérieuse de Strasbourg',\n",
+       "  'date': datetime.datetime(2020, 11, 6, 11, 11, 39, 485027),\n",
+       "  'content': 'La Société Mystérieuse de Strasbourg compte de nombreux érudits qui         ont façonné la ville de Strasbourg. Ils vous ont laissé quelques énigmes afin de         rencontrer les meilleurs d’entre vous, de vous tester et peut-être même de les         rejoindre.        \\nSerez-vous de taille à résoudre les énigmes des grandes figures qui ont contribué         au prestige de Strasbourg ?',\n",
+       "  'user_id': 1},\n",
+       " {'title': '1913, Meurtre à la Krutenau',\n",
+       "  'date': datetime.datetime(2020, 11, 6, 11, 11, 40, 504510),\n",
+       "  'content': '“Mon arrière grand-père est un assassin selon les archives         historiques. Aidez-moi à fouiller le passé pour le prouver ou le démentir”         \\nJean est en possession d’une lettre d’un aïeul contredisant les archives         historiques qui font de son arrière-grand père l’auteur du Meurtre à la         Krutenau. Il vous sollicite pour investiguer et connaître la vérité.         Une Machine à Immersion Spatio-Temporelle devrait vous permettre de revoir         certaines scènes et de comprendre ce qu’il s’est passé.',\n",
+       "  'user_id': 1},\n",
+       " {'title': 'ENIGMA Strasbourg',\n",
+       "  'date': datetime.datetime(2020, 11, 6, 11, 11, 41, 489075),\n",
+       "  'content': 'Percez les mystères de Strasbourg et explorez la ville.        \\nVous avez aimé les escape games ? Alors relevez le défi des jeux de         piste ENIGMA Strasbourg. Nul besoin de s’échapper, seulement de s’évader !        \\nLes jeux de piste ENIGMA Strasbourg sont des jeux géants et se déroulent         en extérieur. Parcourez en autonomie, revisitez à votre rythme l’hypercentre         de Strasbourg à travers différents jeux de piste ou enquêtes.        \\nBientôt de retour à Strasbourg.',\n",
+       "  'user_id': 1}]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for post in posts:\n",
+    "    db.session.add(Post(title=post['title'], \n",
+    "                        date=post['date'], \n",
+    "                        content=post['content'], \n",
+    "                        user_id=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_post = Post.query.paginate(per_page=2, page=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'has_next',\n",
+       " 'has_prev',\n",
+       " 'items',\n",
+       " 'iter_pages',\n",
+       " 'next',\n",
+       " 'next_num',\n",
+       " 'page',\n",
+       " 'pages',\n",
+       " 'per_page',\n",
+       " 'prev',\n",
+       " 'prev_num',\n",
+       " 'query',\n",
+       " 'total']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(all_post)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for page in all_post.iter_pages():\n",
+    "    print(page)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "all_post"
+   ]
   }
  ],
  "metadata": {
