--- a/jpn/Draft.ipynb
+++ b/jpn/Draft.ipynb
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -401,11 +401,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = User.query.paginate()"
+    "users = User.query.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[User('Bertrand', 'bertrandburcker@gmail.com', 'default.png'),\n",
+       " User('clem', 'clem@hotmail.fr', 'default.png'),\n",
+       " User('Tom', 'Tom@machin.com', 'default.png'),\n",
+       " User('Pierre', 'Pierre@machin.com', 'default.png')]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users"
    ]
   },
   {
@@ -672,6 +695,124 @@
    "source": [
     "all_post"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itsdangerous import TimedJSONWebSignatureSerializer as Serializer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Serializer('secret', 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token = s.dumps({'user_id': 1}).decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SignatureExpired",
+     "evalue": "Signature expired",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSignatureExpired\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-985dc7d1ce4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.pyenv/versions/3.8.5/envs/vivadata/lib/python3.8/site-packages/itsdangerous/jws.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(self, s, salt, return_header)\u001b[0m\n\u001b[1;32m    200\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"exp\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 202\u001b[0;31m             raise SignatureExpired(\n\u001b[0m\u001b[1;32m    203\u001b[0m                 \u001b[0;34m\"Signature expired\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m                 \u001b[0mpayload\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSignatureExpired\u001b[0m: Signature expired"
+     ]
+    }
+   ],
+   "source": [
+    "s.loads(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "config.json  errors\t  main\t     pages  __pycache__  static     users\r\n",
+      "config.py    __init__.py  models.py  posts  site.db\t templates\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../app_flask/flask_project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import sys\n",
+    "sys.path.append('../app_flask/flask_project')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../app_flask/flask_project/config.json') as f:\n",
+    "    config = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'SECRET_KEY': '12b71d0522464200e53620635bd21121',\n",
+       " 'SQLALCHEMY_DATABASE_URI': 'sqlite:///site.db',\n",
+       " 'MAIL_USERNAME': 'contact@enigmastrasbourg.com',\n",
+       " 'MAIL_PASSWORD': 'BHU&85@edpa'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
