reorganisation for automation

--- a/jpn/01-resize-images.ipynb
+++ b/jpn/01-resize-images.ipynb
@@ -55,6 +55,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/media/ranto/AB0C-7457/3. ENIGMA Strasbourg - jeux et paperasse/5.Reconnaissance-d-images/images\"\n",
+    "\n",
+    "directories = os.listdir(path)\n",
+    "directories.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['00.Cathedrale-de-Strasbourg',\n",
+       " '01.Lycée-Pontonniers',\n",
+       " '02.Egliste-St-Thomas',\n",
+       " '03.Palais-Rohan-l-Ill',\n",
+       " '04.Palais-Rohan-Place-Chateau',\n",
+       " '05.Opéra',\n",
+       " '06.Aubette',\n",
+       " '07.Ghandi',\n",
+       " '08.Place-de-la-bourse',\n",
+       " '09.Centre-administratif-de-deStrasbourg',\n",
+       " '10.Statue-de-danseuse',\n",
+       " '11.Monument-Desaix',\n",
+       " '12.Conservatoire']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "directories"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
